--- a/src/lua/alpha/lsp/snippets/package.json
+++ b/src/lua/alpha/lsp/snippets/package.json
@@ -6,7 +6,7 @@
                 "language": [
                     "all"
                 ],
-                "path": "./all.json"
+                "path": "./all.code-snippets"
             },
             {
                 "language": [
@@ -29,3 +29,4 @@
         ]
     }
 }
+
